# HoneyBot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: bot.py  io_admin.py  keyboard.py
db/: connection.py  honey_info.py  query.py
db/io/: prints.py
db/query/: buying_transactions.py  create_tables.py  drop_tables.py  honey.py  init_data.py  orders.py  users.py
